--- a/app/views/index.html
+++ b/app/views/index.html
@@ -54,6 +54,47 @@
 
             <hr>
 
+            <h2 class="govuk-heading-m">Register to use web platform</h2>
+
+
+            <p>
+            To do
+            </p>
+
+            <hr>
+
+            <h2 class="govuk-heading-m">Log into web platform</h2>
+
+
+            <p>
+            To do
+            </p>
+
+            <hr>
+
+
+            <h2 class="govuk-heading-m">Link Web Account to Council Tax Account</h2>
+
+            <h3 class="govuk-heading-s">v1</h3>
+
+
+            <ul class="govuk-list govuk-list--bullet">
+              <li><a href="Link_Web_Account_To_Council_Tax/v1/index">v1 rough idea</a></li>
+            </ul>
+
+
+            <h3 class="govuk-heading-s">v2</h3>
+
+            <p>
+              Work following workshops with Greenwich staff and drafting flows with Jamie.
+            </p>
+
+            <ul class="govuk-list govuk-list--bullet">
+              <li><a href="Link_Web_Account_To_Council_Tax/v2/route_1/index">route 1</a></li>
+              <li><a href="Link_Web_Account_To_Council_Tax/v2/route_2/index">route 2</a></li>
+            </ul>
+
+            <hr>
 
       <h2 class="govuk-heading-m">Council Tax Account Overview</h2>
 
@@ -74,15 +115,6 @@
 
       <hr>
 
-
-      <h2 class="govuk-heading-m">Register to use online</h2>
-
-      <ul class="govuk-list govuk-list--bullet">
-        <li><a href="Register_To_Use_Online/v1/index">v1 landing page</a></li>
-      </ul>
-
-
-      <hr>
 
       <h2 class="govuk-heading-m">Set up Direct Debit</h2>
 
@@ -157,6 +189,19 @@
 
       <hr>
 
+      <h2 class="govuk-heading-m">Amend Direct Debit</h2>
+
+      <h3 class="govuk-heading-s">v1</h3>
+
+      <p>
+        Si's initial flow
+      </p>
+
+      <p>
+        <a href="Amend_Direct_Debit/v1/view_DD_details">view details of Direct Debit</a>
+      </p>
+
+      <hr>
 
       <h2 class="govuk-heading-m">View a council tax balance online</h2>
 
