Amends to Set Up Direct Debit

--- a/app/views/Amend_Direct_Debit/v1/view_DD_details.html
+++ b/app/views/Amend_Direct_Debit/v1/view_DD_details.html
@@ -68,7 +68,7 @@
         Payment schedule
       </dt>
       <dd class="govuk-summary-list__value">
-        Monthly from April to January
+        Paying over ten months, monthly from April to January
       </dd>
         <dd class="govuk-summary-list__actions">
         </dd>
