--- a/app/views/Council_Tax_Account_Overview/v1/index-dd-cancel-submitted.html
+++ b/app/views/Council_Tax_Account_Overview/v1/index-dd-cancel-submitted.html
@@ -148,7 +148,7 @@
 
 
 <p style="margin-top: -16px;">
-  <a href="#">Amend or cancel Direct Debit</a>
+You have submitted for a Direct Debit to be cancelled. It can take up 5 days to reflect here.
 </p>
 
 
