--- a/app/views/Set_Up_A_Direct_Debit/v4/check_info_provided.html
+++ b/app/views/Set_Up_A_Direct_Debit/v4/check_info_provided.html
@@ -24,7 +24,7 @@
           Council tax account number
         </dt>
         <dd class="govuk-summary-list__value">
-          {{ data['council-tax-account-number'] }}
+          12345678
         </dd>
           <dd class="govuk-summary-list__actions">
               <a class="govuk-link" href="council_tax_number">
@@ -55,6 +55,19 @@
 
 <div class="govuk-summary-list__row">
   <dt class="govuk-summary-list__key">
+    Telephone number
+  </dt>
+  <dd class="govuk-summary-list__value">
+    0797 693 7205
+  </dd>
+    <dd class="govuk-summary-list__actions">
+      <a class="govuk-link" href="communicaton_preferences">
+        Change<span class="govuk-visually-hidden"> send council tax correspondance by email</span>
+    </a>
+    </dd>
+</div>
+<div class="govuk-summary-list__row">
+  <dt class="govuk-summary-list__key">
     Send council tax correspondance by email
   </dt>
   <dd class="govuk-summary-list__value">
@@ -64,6 +77,21 @@
       <a class="govuk-link" href="communicaton_preferences">
         Change<span class="govuk-visually-hidden"> send council tax correspondance by email</span>
     </a>
+    </dd>
+</div>
+<div class="govuk-summary-list__row">
+  <dt class="govuk-summary-list__key">
+    Your address
+  </dt>
+  <dd class="govuk-summary-list__value">
+    123 Main Road
+    Greenwich
+    SE10 1AA
+  </dd>
+    <dd class="govuk-summary-list__actions">
+        <a class="govuk-link" href="council_tax_number">
+          Change<span class="govuk-visually-hidden"> property address</span>
+      </a>
     </dd>
 </div>
 
