--- a/app/views/Set_Up_A_Direct_Debit/v4/confirm_property.html
+++ b/app/views/Set_Up_A_Direct_Debit/v4/confirm_property.html
@@ -20,12 +20,12 @@
 
       <form class="post" method="post" action="property_confirmation">
 
-      <p>
+      <p class="govuk-body-m">
         <strong>Council tax account number</strong><br />
         {{ data['council-tax-account-number'] }} 12345678
       </p>
 
-      <p>
+      <p class="govuk-body-m">
         <strong>Property address</strong><br />
         123 Main Road<br>
         Greenwich<br>
