--- a/app/views/Council_Tax_Account_Overview/v1/index-dd-set-up-links.html
+++ b/app/views/Council_Tax_Account_Overview/v1/index-dd-set-up-links.html
@@ -152,13 +152,14 @@
 </p>
 
 
-      <h3 class="govuk-heading-s">
-          Download your annual bills
+      <h3 class="govuk-heading-m">
+          View your previous bills
       </h3>
 
       <p>
-        <a href="#">Council Tax Bill 2020 to 2021</a><br />
-        <span class="govuk-body-s">PDF, 140KB</span>
+        <a href="#">Council Tax 2020 to 2021</a><br>
+        <a href="#">Council Tax 2019 to 2020</a><br>
+
       </p>
 
 
