--- a/app/views/Amend_Direct_Debit/v1/view_DD_details.html
+++ b/app/views/Amend_Direct_Debit/v1/view_DD_details.html
@@ -23,13 +23,11 @@
 
       <dl class="govuk-summary-list govuk-!-margin-bottom-9">
       <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
+        <dt class="govuk-summary-list__key" style="width:50%;"">
           Council tax account number (is this effectively the Direct Debit reference number? not so sure myself)
         </dt>
         <dd class="govuk-summary-list__value">
           1122334455
-        </dd>
-        <dd class="govuk-summary-list__actions">
         </dd>
       </div>
       <div class="govuk-summary-list__row">
@@ -41,26 +39,19 @@
           Greenwich<br>
           SE10 1AA<br>
         </dd>
-          <dd class="govuk-summary-list__actions">
-          </dd>
       </div>
       </dl>
 
 
     <h2 class="govuk-heading-m">Payment schedule</h2>
 
-    <dl class="govuk-summary-list govuk-!-margin-bottom-9">
+    <dl class="govuk-summary-list govuk-!-margin-bottom-3">
     <div class="govuk-summary-list__row">
       <dt class="govuk-summary-list__key">
         Date of payment
       </dt>
       <dd class="govuk-summary-list__value">
         15h of every month
-      </dd>
-      <dd class="govuk-summary-list__actions">
-        <a class="govuk-link" href="DD_date">
-          Change<span class="govuk-visually-hidden"> payment day</span>
-      </a>
       </dd>
     </div>
     <div class="govuk-summary-list__row">
@@ -75,61 +66,29 @@
     </div>
     </dl>
 
+    <p>
+    <a class="govuk-link" href="DD_date">
+      Change payment day
+    </a>
+    </p>
+
       <h2 class="govuk-heading-m">Bank account details</h2>
 
-      <dl class="govuk-summary-list govuk-!-margin-bottom-9">
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
-          Name on the account
-        </dt>
-        <dd class="govuk-summary-list__value">
-          Simon Wilson
-        </dd>
-          <dd class="govuk-summary-list__actions">
-              <a class="govuk-link" href="bank_details">
-                Change<span class="govuk-visually-hidden"> bank account details</span>
-            </a>
-          </dd>
-      </div>
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
-          Sort code
-        </dt>
-        <dd class="govuk-summary-list__value">
-          11-22-33
-        </dd>
-          <dd class="govuk-summary-list__actions">
+      <p>
+        Paid from bank account ending in -1234
+        </p>
 
-          </dd>
-      </div>
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
-          Account number
-        </dt>
-        <dd class="govuk-summary-list__value">
-          Ending in 3344
-        </dd>
-          <dd class="govuk-summary-list__actions">
+        <p>
+        <a class="govuk-link" href="bank_details">
+          Change bank account details
+        </a>
+        </p>
 
-          </dd>
-      </div>
-      <div class="govuk-summary-list__row">
-        <dt class="govuk-summary-list__key">
-          Bank name
-        </dt>
-        <dd class="govuk-summary-list__value">
-          Lloyds
-        </dd>
-          <dd class="govuk-summary-list__actions">
-
-          </dd>
-      </div>
-    </dl>
-
+        <h2 class="govuk-heading-m">Cancel Direct Debit</h2>
 
           <p>
-            <a href="cancel_DD">Cancel Direct Debit</a>
-
+            <a class="govuk-link" href="cancel_DD">Cancel Direct Debit</a>
+          </p>
 
     </div>
   </div>
