--- a/app/views/Council_Tax_Account_Overview/v1/index-dd-set-up.html
+++ b/app/views/Council_Tax_Account_Overview/v1/index-dd-set-up.html
@@ -148,7 +148,7 @@
 
 
 <p style="margin-top: -16px;">
-  <a href="#">Amend or cancel Direct Debit</a>
+  <a href="../../Amend_Direct_Debit/v1/view_DD_details">View and change Direct Debit</a>
 </p>
 
 
