--- a/app/views/Link_Web_Account_To_Council_Tax/v1/route_3/start.html
+++ b/app/views/Link_Web_Account_To_Council_Tax/v1/route_3/start.html
@@ -15,42 +15,39 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">
-        Register to use online services
+        Connect to a council tax account
       </h1>
 
-      <h2 class="govuk-heading-l">
+      <p>
+        To manage your council tax online we need to connect to your council tax account.
+      </p>
+
+      <p>
+        This process should take several minutes.
+      </p>
+
+      <h2 class="govuk-heading-m">
         Before you start
       </h2>
 
 
-      <h3 class="govuk-heading-m">
-        Applied for a PIN by post and you have received it?
-      </h3>
-
       <p>
-        <a href="your_personal_details_for_PIN">Click here<a/>
-        </p>
-
-        <h3 class="govuk-heading-m">
-          Starting setting up
-        </h3>
-
-      <p>
-        You will need
+        You will need:
       </p>
 
       <ul class="govuk-list govuk-list--bullet">
         <li>
-          A mobile phone (UK only?)
+          A recent council tax bill for the property.
         </li>
         <li>
-          Or a postal address (anywhere in the world)
+          The month and year you became liable for paying council tax for the property. This may be the same as the date you legally took ownership of the property.
         </li>
+
       </ul>
 
       {{ govukButton({
         text: "Start now",
-        href: "your_personal_details",
+        href: "council_tax_number",
         isStartButton: true
       }) }}
 
