--- a/app/views/index.html
+++ b/app/views/index.html
@@ -77,9 +77,15 @@
 
             <h3 class="govuk-heading-s">v1</h3>
 
+            <p>
+              References ideas <a href="https://miro.com/app/board/o9J_lf2Y6Wk=/">on Miro</a>.
+            </p>
 
             <ul class="govuk-list govuk-list--bullet">
-              <li><a href="Link_Web_Account_To_Council_Tax/v1/index">v1 rough idea</a></li>
+              <li><a href="Link_Web_Account_To_Council_Tax/v1/route_1/start">route 1 rough idea</a></li>
+              <li><a href="Link_Web_Account_To_Council_Tax/v1/route_2/start">route 2 rough idea</a></li>
+              <li><a href="Link_Web_Account_To_Council_Tax/v1/route_3/start">route 3 rough idea</a></li>
+
             </ul>
 
 
