Edits to v1-> route 3 of link uo
Now has routes underneath

--- a/app/views/Link_Web_Account_To_Council_Tax/v1/route_3/confirmation.html
+++ b/app/views/Link_Web_Account_To_Council_Tax/v1/route_3/confirmation.html
@@ -23,7 +23,7 @@
             titleText: "Council tax account linked"
           }) }}
 
-          <p class="govuk-body">[because we have your email address] We have sent you an email to confirm this has been set up.</p>
+          <p class="govuk-body">We have sent you an email to confirm this has been set up.</p>
 
           <h2 class="govuk-heading-m">What happens next</h2>
 
