--- a/app/views/Link_Web_Account_To_Council_Tax/v1/route_3/council_tax_number_no_number.html
+++ b/app/views/Link_Web_Account_To_Council_Tax/v1/route_3/council_tax_number_no_number.html
@@ -6,28 +6,42 @@
 {% endblock %}
 
 
+
 {% block content %}
 
 
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+
+      {{ govukErrorSummary({
+        "titleText": "There is a problem",
+        "errorList": [
+          {
+            "text": "Enter an 8 digit council tax reference number",
+            "href": "#council-tax-account-number"
+          }
+        ]
+      }) }}
+
       <span class="govuk-caption-l">Connect to a council tax account</span>
 
       <form class="post" method="post" action="council_tax_number_check">
-
 
             {{ govukInput({
               label: {
                 text: "Council tax account number",
                 classes: "govuk-label--xl",
-                isPageHeading: true
+                isPageHeading: false
               },
-              classes: "govuk-input--width-10",
+              classes: "govuk-input--width-10 ",
               id: "council-tax-account-number",
               name: "council-tax-account-number",
               hint: {
                 text: "Must be between 8 digits long"
+              },
+              errorMessage: {
+                text: "Enter an 8 digit council tax reference number"
               },
               inputmode: "numeric",
               pattern: "[0-9]*",
