passes through data to display on error pages

--- a/app/views/Link_Web_Account_To_Council_Tax/v1/route_3/name.html
+++ b/app/views/Link_Web_Account_To_Council_Tax/v1/route_3/name.html
@@ -30,7 +30,6 @@
               classes: "govuk-input--width-20",
               id: "first-name",
               name: "first-name",
-              value: first-name,
               hint: {
                 text: "Must be your name as displayed on a council tax bill"
               }
@@ -45,11 +44,13 @@
               classes: "govuk-input--width-20",
               id: "last-name",
               name: "last-name",
-              value: "Dave",
               hint: {
                 text: "Must be your name as displayed on a council tax bill"
               }
             }) }}
+
+
+                        <input name="counter" id="counter" value="0" type="hidden">
 
 
       {{ govukButton({
