--- a/app/views/Link_Web_Account_To_Council_Tax/v1/route_3/name_both_error.html
+++ b/app/views/Link_Web_Account_To_Council_Tax/v1/route_3/name_both_error.html
@@ -49,7 +49,7 @@
               classes: "govuk-input--width-20",
               id: "first-name",
               name: "first-name",
-              value: first-name,
+              value: data['first-name'],
               errorMessage: {
                 text: "Enter a first name"
               }
@@ -64,7 +64,7 @@
               classes: "govuk-input--width-20",
               id: "last-name",
               name: "last-name",
-              value: last-name,
+              value: data['last-name'],
               errorMessage: {
                 text: "Enter a last name"
               }
