--- a/app/views/Link_Web_Account_To_Council_Tax/v1/route_3/name_first_error.html
+++ b/app/views/Link_Web_Account_To_Council_Tax/v1/route_3/name_first_error.html
@@ -45,7 +45,7 @@
               classes: "govuk-input--width-20",
               id: "first-name",
               name: "first-name",
-              value: first-name,
+              value: data['first-name'],
               errorMessage: {
                 text: "Enter a first name"
               }
@@ -60,8 +60,10 @@
               classes: "govuk-input--width-20",
               id: "last-name",
               name: "last-name",
-              value: last-name
+              value: data['last-name']
             }) }}
+
+            <input name="counter" value="{{ counter }}" type="hidden">
 
 
       {{ govukButton({
