--- a/app/views/Link_Web_Account_To_Council_Tax/v1/route_3/name_last_error.html
+++ b/app/views/Link_Web_Account_To_Council_Tax/v1/route_3/name_last_error.html
@@ -46,7 +46,7 @@
               classes: "govuk-input--width-20",
               id: "first-name",
               name: "first-name",
-              value: first-name
+              value: data['first-name']
             }) }}
 
 
@@ -58,7 +58,7 @@
               classes: "govuk-input--width-20",
               id: "last-name",
               name: "last-name",
-              value: last-name,
+              value: data['last-name'],
               errorMessage: {
                 text: "Enter a last name"
               }
