--- a/app/views/Link_Web_Account_To_Council_Tax/v1/route_3/name_last_error.html
+++ b/app/views/Link_Web_Account_To_Council_Tax/v1/route_3/name_last_error.html
@@ -27,11 +27,22 @@
 
       <span class="govuk-caption-l">Connect to a council tax account</span>
 
+
+
       <form class="post" method="post" action="name_check">
 
         <h1 class="govuk-heading-xl">
           Your name
         </h1>
+
+        <div class="govuk-warning-text">
+          <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+          <strong class="govuk-warning-text__text">
+            <span class="govuk-warning-text__assistive">Warning</span>
+            You have 3 attempts to do this. You are currently on attempt {{ data['counter'] }}.
+          </strong>
+        </div>
+
 
         <p>
           This must be your name as displayed on a council tax bill.
@@ -64,6 +75,7 @@
               }
             }) }}
 
+            <input name="counter" value="{{ data['counter'] }}" type="hidden">
 
       {{ govukButton({
         text: "Continue"
