--- a/app/views/Link_Web_Account_To_Council_Tax/v1/route_3/question_error.html
+++ b/app/views/Link_Web_Account_To_Council_Tax/v1/route_3/question_error.html
@@ -13,13 +13,25 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+
+      {{ govukErrorSummary({
+        "titleText": "There is a problem",
+        "errorList": [
+
+          {
+            "text": "Enter a month and a year",
+            "href": "#date"
+          }
+        ]
+      }) }}
       <span class="govuk-caption-l">Connect to a council tax account</span>
 
       <form class="post" method="post" action="question_check">
 
 
 
-        <div class="govuk-form-group">
+
+        <div class="govuk-form-group govuk-form-group--error">
         <fieldset class="govuk-fieldset" role="group" aria-describedby="date-hint">
 
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
@@ -31,10 +43,22 @@
           </legend>
 
 
+                            <div class="govuk-warning-text">
+                              <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+                              <strong class="govuk-warning-text__text">
+                                <span class="govuk-warning-text__assistive">Warning</span>
+                                You have 3 attempts to do this. You are currently on attempt {{ data['counter'] }}.
+                              </strong>
+                            </div>
+
           <div id="date-hint" class="govuk-hint">
             For example, 3 2007
           </div>
 
+
+          <span id="last-name-error" class="govuk-error-message">
+            <span class="govuk-visually-hidden">Error:</span> Enter a month and year
+          </span>
 
           <div class="govuk-date-input" id="date">
 
@@ -66,7 +90,7 @@
 
         </div>
 
-        <input name="counter" id="counter" value="1" type="hidden">
+        <input name="counter" id="counter" value="{{ data['counter']}}" type="hidden">
 
 
       {{ govukButton({
