Changes to amend

--- a/app/views/Amend_Direct_Debit/v1/cancel_DD.html
+++ b/app/views/Amend_Direct_Debit/v1/cancel_DD.html
@@ -26,11 +26,11 @@
       </p>
 
 
-      <form class="post" method="post" action="DD_cancelled_confirmation">
+      <form class="post" method="post" action="cancel_DD_reason">
 
         {{ govukRadios({
-          idPrefix: "reason-cancel",
-          name: "reason-cancel",
+          idPrefix: "cancel-reason",
+          name: "cancel-reason",
           fieldset: {
             legend: {
               text: "Why do you want to cancel this Direct Debit?",
