--- a/app/views/Amend_Direct_Debit/v1/confirm_bank_details.html
+++ b/app/views/Amend_Direct_Debit/v1/confirm_bank_details.html
@@ -60,10 +60,10 @@
         </div>
         <div class="govuk-summary-list__row">
           <dt class="govuk-summary-list__key">
-            Bank name
+            Buyilding society roll number
           </dt>
           <dd class="govuk-summary-list__value">
-            {{ data['bank-name'] }}
+            {{ data['roll-number'] }}
           </dd>
             <dd class="govuk-summary-list__actions">
 
