--- a/app/views/Amend_Direct_Debit/v1/view_DD_details.html
+++ b/app/views/Amend_Direct_Debit/v1/view_DD_details.html
@@ -24,7 +24,7 @@
       <dl class="govuk-summary-list govuk-!-margin-bottom-9">
       <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key" style="width:50%;"">
-          Council tax account number (is this effectively the Direct Debit reference number? not so sure myself)
+          Council tax account number
         </dt>
         <dd class="govuk-summary-list__value">
           1122334455
