--- a/app/views/index.html
+++ b/app/views/index.html
@@ -82,22 +82,9 @@
             </p>
 
             <ul class="govuk-list govuk-list--bullet">
-              <li><a href="Link_Web_Account_To_Council_Tax/v1/route_1/start">route 1 rough idea</a></li>
-              <li><a href="Link_Web_Account_To_Council_Tax/v1/route_2/start">route 2 rough idea</a></li>
-              <li><a href="Link_Web_Account_To_Council_Tax/v1/route_3/start">route 3 rough idea</a></li>
-
-            </ul>
-
-
-            <h3 class="govuk-heading-s">v2</h3>
-
-            <p>
-              Work following workshops with Greenwich staff and drafting flows with Jamie.
-            </p>
-
-            <ul class="govuk-list govuk-list--bullet">
-              <li><a href="Link_Web_Account_To_Council_Tax/v2/route_1/index">route 1</a></li>
-              <li><a href="Link_Web_Account_To_Council_Tax/v2/route_2/index">route 2</a></li>
+              <li><a href="Link_Web_Account_To_Council_Tax/v1/route_1/start">route 1 rough idea</a> - dummy pages</li>
+              <li><a href="Link_Web_Account_To_Council_Tax/v1/route_2/start">route 2 rough idea</a> - dummy pages</li>
+              <li><a href="Link_Web_Account_To_Council_Tax/v1/route_3/start">route 3 rough idea</a> - carries some basic validation checks and mimics 3 tries only approach</li>
             </ul>
 
             <hr>
@@ -192,6 +179,22 @@
       <p>
         <a href="Set_Up_A_Direct_Debit/v4/index">v4 landing page</a>
       </p>
+
+
+      <h3 class="govuk-heading-s">v5</h3>
+
+      <p>Copy of v3 journey, user "logged out"</p>
+
+
+      <ul class="govuk-list govuk-list--bullet">
+        <li><a href="/Set_Up_A_Direct_Debit/v5/council_tax_details">Council tax number and postcode pages combined</a>, as per how built</li>
+      </ul>
+
+      <p>
+        <a href="Set_Up_A_Direct_Debit/v5/index">v4 landing page</a>
+      </p>
+
+
 
       <hr>
 
