--- a/app/views/Set_Up_A_Direct_Debit/v5/council_tax_number_no_number.html
+++ b/app/views/Set_Up_A_Direct_Debit/v5/council_tax_number_no_number.html
@@ -5,7 +5,12 @@
   GOV.UK Prototype Kit
 {% endblock %}
 
+{% block beforeContent %}
 
+
+
+  <a class="govuk-back-link" href="/url/of/previous/page">Back</a>
+{% endblock %}
 
 {% block content %}
 
@@ -13,10 +18,20 @@
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <span class="govuk-caption-l">View a council tax balance online</span>
 
-      <form class="post" method="post" action="postcode">
+      {{ govukErrorSummary({
+        "titleText": "There is a problem",
+        "errorList": [
+          {
+            "text": "Enter an 8 digit council tax reference number",
+            "href": "#council-tax-account-number"
+          }
+        ]
+      }) }}
 
+      <span class="govuk-caption-l">Set up a Direct Debit</span>
+
+      <form class="post" method="post" action="council_tax_number_check">
 
             {{ govukInput({
               label: {
@@ -24,11 +39,14 @@
                 classes: "govuk-label--xl",
                 isPageHeading: false
               },
-              classes: "govuk-input--width-10",
+              classes: "govuk-input--width-10 ",
               id: "council-tax-account-number",
               name: "council-tax-account-number",
               hint: {
                 text: "Must be between 8 digits long"
+              },
+              errorMessage: {
+                text: "Enter an 8 digit council tax reference number"
               },
               inputmode: "numeric",
               pattern: "[0-9]*",
@@ -39,7 +57,7 @@
 
       {{ govukDetails({
         summaryText: "Where can you find the council tax account number?",
-        text: "If you have a council tax bill for the property, you will find the postcode in the address of the property."
+        text: "If you have a council tax bill for the property, you will find the council tax account number on the front of the bill under the property address."
       }) }}
 
       {{ govukButton({
