v2 amend council tax

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -188,12 +188,23 @@
 
       <ul class="govuk-list govuk-list--bullet">
         <li><a href="/Set_Up_A_Direct_Debit/v5/council_tax_details">Council tax number and postcode pages combined</a>, as per how built</li>
+        <li>Comms preferences screen removed</li>
       </ul>
 
       <p>
-        <a href="Set_Up_A_Direct_Debit/v5/index">v4 landing page</a>
+        <a href="Set_Up_A_Direct_Debit/v5/index">v5 landing page</a>
+        <li>Comms preferences removed</li>
+
+
       </p>
 
+      <h3 class="govuk-heading-s">v6</h3>
+
+      <p>Copy of v4 journey, user "logged in"</p>
+
+      <p>
+        <li><a href="Set_Up_A_Direct_Debit/v6/index">v4 landing page</a></li>
+      </p>
 
 
       <hr>
@@ -208,6 +219,14 @@
 
       <p>
         <a href="Amend_Direct_Debit/v1/view_DD_details">view details of Direct Debit</a>
+      </p>
+
+      <p>
+        A revised flow, which focuses on when to cancel and when not to cancel.
+      </p>
+
+      <p>
+        <a href="Amend_Direct_Debit/v2/view_DD_details">view details of Direct Debit</a>
       </p>
 
       <hr>
