--- a/app/views/index.html
+++ b/app/views/index.html
@@ -193,9 +193,6 @@
 
       <p>
         <a href="Set_Up_A_Direct_Debit/v5/index">v5 landing page</a>
-        <li>Comms preferences removed</li>
-
-
       </p>
 
       <h3 class="govuk-heading-s">v6</h3>
@@ -203,7 +200,7 @@
       <p>Copy of v4 journey, user "logged in"</p>
 
       <p>
-        <li><a href="Set_Up_A_Direct_Debit/v6/index">v4 landing page</a></li>
+        <a href="Set_Up_A_Direct_Debit/v6/index">v6 landing page</a>
       </p>
 
 
@@ -225,9 +222,11 @@
         A revised flow, which focuses on when to cancel and when not to cancel.
       </p>
 
-      <p>
-        <a href="Amend_Direct_Debit/v2/view_DD_details">view details of Direct Debit</a>
-      </p>
+
+      <ul class="govuk-list govuk-list--bullet">
+        <li><a href="Amend_Direct_Debit/v2/view_DD_details">view details of Direct Debit</a></li>
+        <li><a href="Amend_Direct_Debit/v2/view_DD_details">cancel Direct Debit</a></li>
+      </ul>
 
       <hr>
 
